<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps</string>
    <string name="spotify">Spotify Streamer App</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="bib">Build It Bigger App</string>
    <string name="xyz">XYZ Reader App</string>
    <string name="capstone">Capstone App</string>
    <string name="launch">This will launch my </string>

</resources>
