<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/header"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="34sp" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/buttonSpotifyStreamer"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@color/udacityOrange"
        android:onClick="buttonToast" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/buttonScoresApp"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@color/udacityOrange"
        android:onClick="buttonToast" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/buttonLibraryApp"
        android:layout_marginTop="@dimen/button_margin"
        android:background="@color/udacityOrange"
        android:onClick="buttonToast" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/bib"
        android:id="@+id/buttonBuildItBigger"
        android:background="@color/udacityOrange"
        android:layout_marginTop="@dimen/button_margin"
        android:onClick="buttonToast" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:id="@+id/buttonXYZReader"
        android:background="@color/udacityOrange"
        android:layout_marginTop="@dimen/button_margin"
        android:onClick="buttonToast" />

    <Button
        android:layout_width="@dimen/button_size"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/buttonCapstone"
        android:background="@color/darkred"
        android:layout_marginTop="@dimen/button_margin"
        android:onClick="buttonToast" />

</LinearLayout>
